[2020-07-20]
- Added CHANGELOG
- Added jest + tests
- Added eslint
- Added jsdoc 
- npm update